# hdrt

./: .gitattributes  .gitignore  Cargo.toml  README.md  README.zh-cn.md  build.rs
.github/: release_template.md
.github/workflows/: build.md  build.yml  build.zh-cn.md
docs/dev/20260705.init.plan/: 20260705.init.plan.md
docs/dev/20260706.win后端方案捏/: 20260706.win后端方案捏.md
docs/scripts/: README.md
docs/scripts/install/: install.sh  install_gitee.sh
src/: build_info.rs  cli.rs  emoji.rs  lib.rs  main.rs  model.rs  privilege.rs  telemetry.rs  warning.rs
src/app/: cli.rs  command.rs  help.rs  help_render.rs  mod.rs  options.rs  spinner.rs  tests.rs
src/app/help/: mod.rs  render.rs
src/collect/: android.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/collector/: benchmark.rs  brand.rs  capability.rs  df.rs  logical_disk.rs  mod.rs  options.rs  sysfs.rs
src/collector/android/: command.rs  cpu.rs  disk.rs  logical_disk.rs  memory.rs  mod.rs  motherboard.rs  placeholder.rs
src/collector/linux/: brand.rs  command.rs  cpu.rs  disk.rs  memory.rs  mod.rs  motherboard.rs  native.rs  native_disk.rs  native_memory.rs  shell.rs  tests.rs
src/collector/linux/native/: disk.rs  memory.rs  mod.rs
src/collector/linux/scripts/: collect_disks.sh  collect_logical_disks.sh  collect_memory.sh  collect_smart.sh
src/collector/macos/: mod.rs  placeholder.rs
src/collector/windows/: basic.rs  cpu.rs  disk.rs  memory.rs  mod.rs  motherboard.rs  native_wmi.rs  powershell.rs  privilege.rs  registry.rs  shell.rs  storage.rs  tests.rs  util.rs
src/collector/windows/native_wmi/: inventory.rs  rows.rs
src/collector/windows/scripts/: collect_hardware.ps1
src/collector/windows/wmi/: inventory.rs  mod.rs  values.rs
src/hardware/: capability.rs  cpu.rs  debug.rs  disk.rs  memory.rs  mod.rs  motherboard.rs  report.rs
src/i18n/: en_us.rs  mod.rs  zh_cn.rs
src/output/: json.rs  markdown.rs  mod.rs  table.rs
src/render/: debug.rs  markdown.rs  mod.rs  style.rs  table.rs  tests.rs  warnings.rs
src/render/snapshots/: cpu_debug_markdown.txt  cpu_json.txt  cpu_markdown.txt
src/telemetry/: disk_io.rs
src/tui/: charts.rs  cpu.rs  draw.rs  mod.rs  panels.rs  screens.rs  selection.rs  state.rs  style.rs  tests.rs  utils.rs  widgets.rs
src/ui/: charts.rs  cpu.rs  mod.rs  panels.rs  render.rs  screens.rs  state.rs  utils.rs  widgets.rs
