[package]
name = "hdrt"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Hardware Device Rust Ratatui: a cross-platform hardware info CLI/TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/VincentZyu233/hdrt"
keywords = ["hardware", "cli", "tui", "ratatui", "system"]
categories = ["command-line-utilities"]

[[bin]]
name = "hdrt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.16"
thiserror = "2"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
