[package]
name = "hdrt"
version = "0.2.3-alpha.22"
edition = "2021"
description = "Hardware Device Rust Ratatui: a cross-platform hardware info CLI/TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/VincentZyuApps/hdrt"
keywords = ["hardware", "cli", "tui", "ratatui", "system"]
categories = ["command-line-utilities"]

[[bin]]
name = "hdrt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tabled = "0.16"
thiserror = "2"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security"] }
winreg = "0.52"
wmi = "0.18"

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
maintainer = "VincentZyu <vincentzyu233@gmail.com>"
copyright = "2026, VincentZyu"
extended-description = """\
Hardware Device Rust Ratatui is a cross-platform \
hardware information CLI/TUI for disks, memory, CPU, \
motherboard, BIOS, and related inventory."""
depends = ""
section = "utils"
priority = "optional"
assets = [
    ["target/release/hdrt", "usr/bin/hdrt", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/hdrt", dest = "/usr/bin/hdrt", mode = "755" },
]
